--- a/README
+++ b/README
@@ -47,18 +47,20 @@ CONFIGURATION
         Set($SideBySidePreview, 1);
 
 AUTHOR
-    Ruslan Zakirov <ruz@bestpractical.com>
+    Best Practical Solutions, LLC <modules@bestpractical.com>
 
 BUGS
     All bugs should be reported via email to
-    bug-RT-Extension-PreviewInSearch@rt.cpan.org
-    <mailto:bug-RT-Extension-PreviewInSearch@rt.cpan.org> or via the web at
-    rt.cpan.org
-    <http://rt.cpan.org/Public/Dist/Display.html?Name=RT-Extension-PreviewIn
-    Search>.
+
+        L<bug-RT-Extension-PreviewInSearch@rt.cpan.org|mailto:bug-RT-Extension-PreviewInSearch@rt.cpan.org>
+
+    or via the web at
+
+        L<rt.cpan.org|http://rt.cpan.org/Public/Dist/Display.html?Name=RT-Extension-PreviewInSearch>.
 
 LICENSE AND COPYRIGHT
-    This software is Copyright 2014 Best Practical Solutions, LLC.
+    This software is Copyright (c) 2007-2014 by Best Practical Solutions,
+    LLC
 
     This is free software, licensed under:
 
