Update documentation to reflect tested server version compatibility

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for RT-Extension-PreviewInSearch
 
+0.05 2016-10-21
+ - Update documentation
+
 0.04 2015-03-05
  - Packaging updates
 
