--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for RT-Extension-PreviewInSearch
 
-0.05 2016-10-21
- - Update documentation
+0.05 2023-09-26
+ - Update for RT 5.0
 
 0.04 2015-03-05
  - Packaging updates
